5.3.11 -> 5.3.12
        - devzero2000: in configure.ac distinguish properly redhat from fedora
        - devzero2000: add preliminary change for momonga buildboot
        - devzero2000: fix typo in repackage_dir for  macros/openmamba.in
        - devzero2000: fix bugurl for  macros/openmamba.in
	- mdawkins: a few fixes for macros/openmamba.in
	- mdawkins: added macros/openmamba.in
    - mdawkins: tagged 5.3.11 release in configure.ac

5.3.10 -> 5.3.11
	- mdawkins: i18n update cs.po da.po de.po es.po fi.po fr.po id.po is.po it.po ja.po
		ko.po nb.po nl.po pa.po pl.po pt.po pt_BR.po ru.po sk.po sl.po sr.po sv.po tr.po
		uk.po vi.po zh_TW.po
    - devzero2000: permit in configure phase to 
      --enable-rpmvercmp-digits-beat-alpha for reverting to the old rpmvercmp 
      behavior where digits beat alpha as used by Mandriva, Fedora, Suse 
      and other (ref https://blueprints.launchpad.net/rpm/+spec/rpm-split-vendor-config-in-autofu)
    - proyvind: add a uClibc(...) dependency for libraries linked against
	uClibc to avoid conflicting duplicates (mandriva only for now)
    - devzero2000: get rid of rindex everywhere: use SUSv3 strrchr instead
    - devzero2000: add more gpg keys to thkp.c test program
    - jbj: verify: re-add digest/signature checks.
    - jbj: move multiarch* to mandriva.in.
    - jbj: put "devel(libfoo)" deps under RPM_VENDOR_MANDRIVA.
    - proyvind: merge multiarch-utils from mandriva.
    - proyvind: macros: sync with updated python macros from mandriva.
    - proyvind: rpmfc: add internel dep generator helper for kernel modules.
    - provyind: kmod-deps.sh: add dependency extractor from mandriva.
    - proyvind: rpmds: implement devel(libfoo) symlink dependencies from
	Mandriva, but with proper ELF SONAME checking.
    - jbj: add a --nofsync popt alias (caveat: experimental & risky).
    - jbj: checksig: check explictly for per-item failures after iterating.
    - jbj: build: fix: resurrect %description -l XY yet again.