@@ -1,4 +1,5 @@
 5.3.11 -> 5.3.12
+	- mdawkins: applied vendor Openmamba patches
         - devzero2000: in configure.ac distinguish properly redhat from fedora
         - devzero2000: add preliminary change for momonga buildboot
         - devzero2000: fix typo in repackage_dir for  macros/openmamba.in
